--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Raccolta Fondi</h1>
-        <p class="details">Abbiamo raccolto <strong>€500</strong> su un obiettivo di <strong>€1000</strong>.</p>
+        <h1>Stato di avanzamento della Raccolta Fondi</h1>
+        <p class="details">Abbiamo raccolto <strong>€60</strong> su un obiettivo di <strong>€1100</strong>.</p>
         <div class="progress-bar-container">
             <div class="progress-bar"></div>
         </div>
         <!-- Quadrante con orario e data -->
         <div class="clock" id="current-date">
-            Data e ora corrente: <span id="date-time"></span>
+          <span id="date-time"></span>
         </div>
         <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
