--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Raccolta Fondi</h1>
-        <p class="details">Abbiamo raccolto <strong id="raised-amount">€500</strong> su un obiettivo di <strong>€1000</strong>.</p>
+        <h1>Sato di avanzamento della Raccolta Fondi</h1>
+        <p class="details">Abbiamo raccolto <strong id="raised-amount">€60</strong> su un obiettivo di <strong>€1100</strong>.</p>
         <div class="progress-bar-container">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
         <!-- Quadrante con orario e data -->
         <div class="clock" id="current-date">
-            Data e ora corrente: <span id="date-time"></span>
+             <span id="date-time"></span>
         </div>
         <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
