--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stato Avanzamento Raccolta Fondi</title>
+    <title>Raccolta Fondi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -77,14 +77,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Raccolta Fondi</h1>
+        <h1>Stato Avanzamento Raccolta Fondi</h1>
         <p class="details">Abbiamo raccolto <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p>
         <div class="progress-bar-container">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
         <!-- Quadrante con orario e data -->
         <div class="clock" id="current-date">
-            Oggi,  <span id="date-time"></span>
+            Oggi, <span id="date-time"></span>
         </div>
         <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
@@ -101,12 +101,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script>
-        // Valori di esempio
-        const goalAmount = 1100;  // Obiettivo di raccolta (in euro)
-        let raisedAmount = 1100;   // Somma raccolta attuale (in euro)
-
         // Funzione per aggiornare la barra di avanzamento
         function updateProgressBar() {
+            const goalAmount = 1100;  // Obiettivo di raccolta (in euro)
+            let raisedAmount = 120;   // Somma raccolta attuale (in euro)
+
             const progress = (raisedAmount / goalAmount) * 100; // Percentuale di raccolta
             const progressBar = document.getElementById("progress-bar");
             progressBar.style.width = progress + "%";  // Imposta la larghezza della barra
@@ -147,14 +146,20 @@
                 header: true,
                 complete: function(results) {
                     const donors = results.data;
+                    console.log(donors); // Verifica il contenuto del CSV caricato
+
                     const donorList = document.getElementById("donor-list");
                     donors.forEach(donor => {
-                        if (donor.Nome && donor.Cognome && donor.Anno) { // Verifica che esistano tutte le colonne
+                        // Verifica che le colonne 'Nome', 'Cognome' e 'Anno' esistano
+                        if (donor.Nome && donor.Cognome && donor.Anno) {
                             const li = document.createElement("li");
-                            li.textContent = `${donor.Nome} ha donato €${donor.Cognome} il ${donor.Anno}`;
+                            li.textContent = `${donor.Nome} ${donor.Cognome} - Anno: ${donor.Anno}`;
                             donorList.appendChild(li);
                         }
                     });
+                },
+                error: function(error) {
+                    console.error("Errore nel caricamento del CSV:", error);
                 }
             });
         }
