--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         // Verifica che le colonne 'Nome', 'Cognome' e 'Anno' esistano
                         if (donor.Nome && donor.Cognome && donor.Anno) {
                             const li = document.createElement("li");
-                            li.textContent = `${donor.Nome} ${donor.Cognome} - Anno: ${donor.Anno}`;
+                            li.textContent = `${donor.Nome} ${donor.Cognome} ${donor.Anno}`;
                             donorList.appendChild(li);
                         }
                     });
