--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         // Funzione per aggiornare la barra di avanzamento
         function updateProgressBar() {
             const goalAmount = 1100;  // Obiettivo di raccolta (in euro)
-            let raisedAmount = 120;   // Somma raccolta attuale (in euro)
+            let raisedAmount = 30;   // Somma raccolta attuale (in euro)
 
             const progress = (raisedAmount / goalAmount) * 100; // Percentuale di raccolta
             const progressBar = document.getElementById("progress-bar");
@@ -153,7 +153,7 @@
                         // Verifica che le colonne 'Nome', 'Cognome' e 'Anno' esistano
                         if (donor.Nome && donor.Cognome) {
                             const li = document.createElement("li");
-                            li.textContent = `${donor.Nome} ${donor.Cognome} ${donor.Anno}`;
+                            li.textContent = `${donor.Nome} ${donor.Cognome} ${donor.Anno} ${donor.Importo}`;
                             donorList.appendChild(li);
                         }
                     });
