--- a/index.html
+++ b/index.html
@@ -73,6 +73,51 @@
             padding: 5px;
             border-bottom: 1px solid #ddd;
         }
+
+      .progress-bar-steps {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .circle {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        color: white;
+        margin: 0 5px; /* Aggiungi un po' di margine tra i cerchi */
+    }
+
+    .line {
+        height: 4px;
+        background-color: #ccc;
+        flex-grow: 1; /* La linea prende tutto lo spazio rimanente tra i cerchi */
+        margin: 0 5px; /* Margine tra linea e cerchi */
+    }
+
+    /* Ottimizzazione per schermi mobili */
+    @media (max-width: 600px) {
+        .progress-bar-steps {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .circle {
+            width: 40px;
+            height: 40px;
+        }
+
+        .line {
+            width: 40px;
+        }
+    }
     </style>
 </head>
 <body>
