--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             color: #2c3e50;
             margin-bottom: 10px;
         }
+
+         .image-container img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+        .progress-bar-container {
+            width: 100%;
+            background-color: #e0e0e0;
+            border-radius: 20px;
+            overflow: hidden;
+            margin: 20px 0;
+            height: 20px;
+        }
         .progress-bar-container {
             width: 100%;
             background-color: #e0e0e0;
@@ -133,6 +146,10 @@
         <!-- Quadrante con orario e data -->
         <div class="clock" id="current-date">
             Oggi, <span id="date-time"></span>
+        </div>
+     </div>
+        <div class="image-container">
+            <img src="ricevutaFEM.jpeg" alt="Descrizione dell'immagine">
         </div>
         <!-- Timer conto alla rovescia 
         <div class="countdown" id="countdown-timer">
