--- a/index.html
+++ b/index.html
@@ -322,5 +322,26 @@
         // Aggiorna la barra di avanzamento all'avvio
         updateProgressBar();
     </script>
+
+<script>
+    const openButton = document.getElementById('openButton');
+    const closeButton = document.getElementById('closeButton');
+    const popup = document.getElementById('popup');
+
+    openButton.addEventListener('click', () => {
+        popup.style.display = 'flex';
+    });
+
+    closeButton.addEventListener('click', () => {
+        popup.style.display = 'none';
+    });
+
+    popup.addEventListener('click', (event) => {
+        if (event.target === popup) {
+            popup.style.display = 'none';
+        }
+    });
+</script>
+    
 </body>
 </html>
