--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             color: white;
             border: none;
             border-radius: 5px;
+            justify-content: center;
+            align-items: center;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
