--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
         button:hover {
             background-color: #0056b3;
         }
-        
+
+        #container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
         .progress-bar-container {
             width: 100%;
             background-color: #e0e0e0;
