--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="line" style="background-color: #ccc;"></div>
 
         <!-- Fase 5 -->
-        <div class="circle" style="background-color: gray;">Destinazione</div>
+        <div class="circle" style="background-color: gray;">Laboratorio</div>
         <div class="line" style="background-color: #ccc;"></div>
         
         <!-- Fase 6 -->
