--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <body>
     <div class="container">
         <h1>Stato Avanzamento Raccolta Fondi</h1>
-        <p class="details">Obiettivo Raccolta Raggiunto! Acquisto effettuato. Siamo in attesa del Kit di prelievo.</p>
+        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. Spedizione prevista nelle 24h.</p>
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -240,11 +240,11 @@
          <div class="line" style="background-color: green;"></div>
         
         <!-- Fase 3 -->
-        <div class="circle" style="background-color: rgb(204, 194, 194);">Campionamento</div>
-        <div class="line" style="background-color: #ccc;"></div>
+        <div class="circle" style="background-color: rgb(135, 231, 135);">Campionamento</div>
+        <div class="line" style="background-color: green;"></div>
         
         <!-- Fase 4 -->
-        <div class="circle" style="background-color: gray;">Spedizione</div>
+        <div class="circle" style="background-color: rgb(204, 194, 194);">Spedizione</div>
         <div class="line" style="background-color: #ccc;"></div>
 
         <!-- Fase 5 -->
