--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             padding: 10px;
             border-radius: 5px;
             background-color: #f8f8f8;
+            justify-content: space-between;
+            align-items: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .countdown {
