--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
          /* Contenitore principale della galleria */
          .gallery-wrapper {
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
