--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
         .line {
             height: 20px; /* Riduci la lunghezza della linea per schermi piccoli */
         }
+        .gallery-wrapper {
+                margin: 5px 0; /* Riduce ulteriormente lo spazio sopra e sotto */
+            }
     }
     </style>
 </head>
