--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
-        <!-- Quadrante con orario e data -->
+        <!-- Quadrante con orario e data 
         <div class="clock" id="current-date">
             Oggi, <span id="date-time"></span>
-        </div>
+        </div> -->
      </div>
 
     <section class="gallery-wrapper">
