--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
          /* Contenitore principale della galleria */
          .gallery-wrapper {
+            background-color: grey;
             margin: 0;
             padding: 0;
             display: flex;
