--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
          /* Contenitore principale della galleria */
          .gallery-wrapper {
-            background-color: grey;
+            background-color: rgb(204, 194, 194);
             margin: 0;
             padding: 0;
             display: flex;
