--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
         <div class="line" style="background-color: green;"></div>
         
         <!-- Fase 4 -->
-        <div class="circle" style="background-color: rgb(204, 194, 194);">Spedizione</div>
+        <div class="circle" style="background-color: rgb(135, 231, 135);">Spedizione</div>
         <div class="line" style="background-color: #ccc;"></div>
 
         <!-- Fase 5 -->
-        <div class="circle" style="background-color: gray;">Laboratorio</div>
+        <div class="circle" style="background-color: rgb(204, 194, 194);">Laboratorio</div>
         <div class="line" style="background-color: #ccc;"></div>
         
         <!-- Fase 6 -->
