--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         
         <!-- Fase 4 -->
         <div class="circle" style="background-color: rgb(135, 231, 135);">Spedizione</div>
-        <div class="line" style="background-color: #ccc;"></div>
+        <div class="line" style="background-color: green;"></div>
 
         <!-- Fase 5 -->
         <div class="circle" style="background-color: rgb(204, 194, 194);">Laboratorio</div>
