--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
         <div class="line" style="background-color: green;"></div>
 
         <!-- Fase 5 -->
-        <div class="circle" style="background-color: rgb(204, 194, 194); width: 80px;
-        height: 80px;">Laboratorio</div>
+        <div class="circle" style="background-color: rgb(204, 194, 194); ">Laboratorio</div>
         <div class="line" style="background-color: #ccc;"></div>
         
         <!-- Fase 6 -->
-        <div class="circle" style="background-color: gray;">Risultati</div>  
+        <div class="circle" style="background-color: gray;width: 90px;
+        height: 90px;">Risultati</div>  
     </div>
 
         <!-- Quadrante con orario e data 
