--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         /* Contenitore specifico per la galleria */
         .gallery-container {
+            margin: 10;
+            padding: 10;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
