--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
     <div class="container">
         <h1>Stato Avanzamento Raccolta Fondi</h1>
-        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. Spedizione prevista nelle 24h.</p>
+        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. Campioni spediti al Laboratorio.</p>
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
