--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     background-color: rgb(204, 194, 194);
   }
   50% {
-    background-color: green;
+    background-color: rgb(135, 231, 135);
   }
 }
 
