--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
         <div class="line" style="background-color: green;"></div>
 
         <!-- Fase 5 -->
-        <div class="circle" style="background-color: rgb(135, 231, 135) ; ">Laboratorio</div>
+        <div class="circle blink" style="background-color: rgb(135, 231, 135) ; ">Laboratorio</div>
         <div class="line" style="background-color: green;"></div>
         
         <!-- Fase 6 -->
-        <div class="circle blink" style="background-color: rgb(204, 194, 194);width: 110px;
+        <div class="circle" style="background-color: rgb(204, 194, 194);width: 110px;
         height: 110px;">Risultati</div>  
     </div>
 
