--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
         <!-- Fase 5 -->
         <div class="circle blink" style="background-color: rgb(135, 231, 135) ; ">Laboratorio</div>
-        <div class="line" style="background-color: green;"></div>
+        <div class="line" style="background-color: grey;"></div>
         
         <!-- Fase 6 -->
         <div class="circle" style="background-color: rgb(204, 194, 194);width: 110px;
