--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     }
          @keyframes lampeggia-verde {
   0%, 100% {
-    background-color: rgb(204, 194, 194);
+    background-color: green;
   }
   50% {
     background-color: rgb(135, 231, 135);
