--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         background-color: #ccc;
         margin: 0 0 10px 0; /* Spazio tra le linee */
     }
-         @keyframes lampeggia-verde {
+     /*    @keyframes lampeggia-verde {
   0%, 100% {
     background-color: green;
   }
@@ -228,7 +228,7 @@
 
 .circle.blink {
   animation: lampeggia-verde 1s infinite;
-}
+} */
 
      .footer {
     position: fixed;
@@ -266,7 +266,7 @@
 <body>
     <div class="container">
         <h1>Stato Avanzamento Raccolta Fondi</h1>
-        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. I risultati saranno disponibili Venerdi 27.</p>
+        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. I risultati completi saranno pubblicati Venerdi 27.</p>
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -290,16 +290,16 @@
 
         <!-- Fase 5 -->
         <div class="circle blink" style="background-color: rgb(135, 231, 135) ; ">Laboratorio</div>
-        <div class="line" style="background-color: grey;"></div>
+        <div class="line" style="background-color: green;"></div>
         
         <!-- Fase 6 -->
-        <div class="circle" style="background-color: rgb(204, 194, 194);width: 110px;
+        <div class="circle" style="background-color: rgb(135, 231, 135);width: 110px;
         height: 110px;">Risultati</div>  
     </div>
 
      <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
-            Tempo previsto per i risultati: <span id="time-remaining"></span>
+            Abbiamo ricevuto i prmi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 17/2023) e non sono state riscontarte criticità. I risultati dei composti Alifatici Clorurati Cancerogini e dei Solventi Organoalogenati non sono ancora disponibili.  <!--<span id="time-remaining"></span>*/-->
         </div> 
 
         <!-- Quadrante con orario e data 
