--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
      <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
-            Abbiamo ricevuto i prmi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 17/2023) e non sono state riscontarte criticità. I risultati dei composti Alifatici Clorurati Cancerogini e dei Solventi Organoalogenati non sono ancora disponibili.  <!--<span id="time-remaining"></span>*/-->
+            Abbiamo ricevuto i primi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 18/2023) e non sono state riscontarte criticità. I risultati dei composti Alifatici Clorurati Cancerogini e dei Solventi Organoalogenati non sono ancora disponibili.  <!--<span id="time-remaining"></span>*/-->
         </div> 
 
         <!-- Quadrante con orario e data 
