--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <body>
     <div class="container">
         <h1>Stato Avanzamento Raccolta Fondi</h1>
-        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. I risultati completi saranno pubblicati Venerdi 27.</p>
+        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. E' possibile scaricare la prima tranche di risultati.</p>
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -307,14 +307,37 @@
             Oggi, <span id="date-time"></span>
         </div> -->
      </div>
- <div id="container">
-            <button id="openButton">Apri scheda parametri</button>
-        </div>
+
+<div id="results" style="text-align: center;">
+    <table border="1" style="border-collapse: collapse; margin: 0 auto; width: 90%; max-width: 400px; font-family: Arial, sans-serif;">
+        <thead>
+            <tr style="background-color: #f2f2f2;">
+                <th colspan="2" style="padding: 10px; text-align: center;">Scarica Referti</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td colspan="2" style="padding: 10px; text-align: center;">
+                    <button style="padding: 5px 10px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="downloadPDF('prima_tranche.pdf')">
+                        Scarica Prima Tranche
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" style="padding: 10px; text-align: center;">
+                    <button style="padding: 5px 10px; background-color: #6c757d; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="notifyUnavailable()">
+                        Scarica Seconda Tranche
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+
     
-        <div id="popup">
-            <span class="close" id="closeButton">&times;</span>
-            <img src="parametri.jpeg" alt="parametri">
-        </div>
     <section class="gallery-wrapper">
         <div class="gallery-container">
             <img src="im1.jpeg" alt="Descrizione immagine 1">
@@ -362,6 +385,20 @@
             const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' };
             document.getElementById("date-time").textContent = now.toLocaleDateString("it-IT", options);
         }
+
+        function downloadPDF(fileName) {
+    const link = document.createElement('a');
+    link.href = fileName;
+    link.download = fileName;
+    document.body.appendChild(link); // Aggiungere temporaneamente il link al DOM
+    link.click();
+    document.body.removeChild(link); // Rimuovere il link dopo il click
+}
+
+function notifyUnavailable() {
+    alert("I risultati della seconda tranche saranno disponibili nei prossimi giorni.");
+}
+
 
         // Calcola il conto alla rovescia
         function updateCountdown() {
