--- a/index.html
+++ b/index.html
@@ -311,8 +311,10 @@
 <div id="results" style="text-align: center;">
     <table border="1" style="border-collapse: collapse; margin: 0 auto; width: 90%; max-width: 400px; font-family: Arial, sans-serif;">
         <thead>
-            <tr style="background-color: #f2f2f2;">
-                <th colspan="2" style="padding: 10px; text-align: center;">Scarica Referti</th>
+            <tr style="background-color: #d3d3d3;">
+                <th colspan="2" style="padding: 10px; text-align: center; color: red;">
+                    Scarica Referti
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -333,6 +335,7 @@
         </tbody>
     </table>
 </div>
+
 
 
 
