--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <body>
     <div class="container">
         <h1>Stato Avanzamento Raccolta Fondi</h1>
-        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. E' possibile scaricare la prima tranche di risultati.</p>
+        <p class="details">Obiettivo Raccolta Raggiunto! Campionamento effettuato con successo in data 09/12/2024. E' possibile scaricare i risultati completi.</p>
             <!-- <strong id="raised-amount">€0</strong> su un obiettivo di <strong>€1100</strong>.</p> -->
             <div id="progress-bar" class="progress-bar"></div>
         </div>
@@ -299,7 +299,7 @@
 
      <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
-            Abbiamo ricevuto i primi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 18/2023) e non sono state riscontrate criticità. I risultati dei composti Alifatici Clorurati Cancerogeni e dei Solventi Organoalogenati non sono ancora disponibili.  <!--<span id="time-remaining"></span>*/-->
+            Abbiamo ricevuto i primi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 18/2023).  <!--<span id="time-remaining"></span>*/-->
         </div> 
 
         <!-- Quadrante con orario e data 
@@ -327,7 +327,7 @@
             </tr>
             <tr>
                 <td colspan="2" style="padding: 10px; text-align: center;">
-                    <button style="padding: 5px 10px; background-color: #6c757d; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="notifyUnavailable()">
+                    <button style="padding: 5px 10px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="downloadPDF('seconda_tranche.pdf')">
                         Scarica Seconda Tranche
                     </button>
                 </td>
