--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
      <!-- Timer conto alla rovescia -->
         <div class="countdown" id="countdown-timer">
-            Abbiamo ricevuto i primi referti. Tutti i parametri finora analizzati rientrano nei limiti di legge (Dlgs. 18/2023).  <!--<span id="time-remaining"></span>*/-->
+            Abbiamo ricevuto tutti i referti. Tutti i parametri analizzati rientrano nei limiti di legge (Dlgs. 18/2023).  <!--<span id="time-remaining"></span>*/-->
         </div> 
 
         <!-- Quadrante con orario e data 
